--- a/index.html
+++ b/index.html
@@ -2,21 +2,26 @@
 <html>
   <head>
     <title>Wikipedia</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
     <div class="container">
 
-    <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="#">Home</a></li>
-      <li role="presentation"><a href="#">Profile</a></li>
-      <li role="presentation"><a href="#">Massage</a></li>
-    </ul>
+      <ul class="nav nav-tabs">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    </li>
+  </ul>
       <div class="jumbotron">
         <div class="panel panel-default">
           <div class="panel-heading">
@@ -48,23 +53,33 @@
         </div>
         </div>
     </div>
-  <div class="row">
-    <div class="col-md-6">
-    <h1>From today's featured artcle</h1>
-      <img src="" alt="">
-      <p>Fôrça Bruta (Brute Force) is the seventh studio album by Brazilian singer-songwriter and guitarist Jorge Ben, recorded with the Trio Mocotó band (pictured) and released by Philips Records in September 1970. It introduced an acoustic samba-based music that was mellower, moodier, and less ornate than Ben's preceding work. In a largely unrehearsed nighttime recording session, the singer improvised and experimented with unconventional rhythmic arrangements, musical techniques, and elements of soul, funk, and rock. Ben's lyrics explored themes of romantic passion, melancholy, sensuality, and—in a departure from the carefree sensibility of past releases—identity politics and elements of postmodernism. A commercial and critical success, Fôrça Bruta established Ben as a leading artist in Brazil's Tropicália movement and pioneered a sound later known as samba rock. The album's first American release came in 2007, the same year that Rolling Stone Brasil named it the 61st greatest Brazilian music record. (Full article...)
+    <div class="row">
+      <div class="col-md-6">
+      <div class="panel panel-info">
+        <div class="panel-heading">
+          <h1 class="panel-title">From today's featured artcle</h1>
+        </div>
+        <div class="panel-body">
 
-      Recently featured: 1896 Cedar Keys hurricane Seattle Sounders FC John C. Calhoun
-      Archive By email More featured articles</p>
-    <h1>Did you know....</h1>
-      <img src="" alt="">
-      <ul>
-        <li>... that American philatelist William Thorne owned a unique block of four United States 1869 24-cent stamps with an inverted center (pictured) showing the signing of the U.S. Declaration of Independence?</li>
-        <li>.. that Ronnie O'Sullivan won the 2017 Masters snooker event, despite breaking his cue tip in his semifinal match?</li>
-        <li>... that Boro Maa created a refugee colony at Thakurnagar for the Matuas, who were displaced due to the 1947 Partition of Bengal?</li>
-        <li>... that Artur Schnabel's recordings of Beethoven's piano sonatas were the first complete recordings ever made of all of the composer's 32 piano sonatas?</li>
-        <li>... that Jon Teske posted a double-double in his first collegiate start and the first collegiate basketball game played at Little Caesars Arena?</li>
-       </ul>
+          <p>Fôrça Bruta (Brute Force) is the seventh studio album by Brazilian singer-songwriter and guitarist Jorge Ben, recorded with the Trio Mocotó band (pictured) and released by Philips Records in September 1970. It introduced an acoustic samba-based music that was mellower, moodier, and less ornate than Ben's preceding work. In a largely unrehearsed nighttime recording session, the singer improvised and experimented with unconventional rhythmic arrangements, musical techniques, and elements of soul, funk, and rock. Ben's lyrics explored themes of romantic passion, melancholy, sensuality, and—in a departure from the carefree sensibility of past releases—identity politics and elements of postmodernism. A commercial and critical success, Fôrça Bruta established Ben as a leading artist in Brazil's Tropicália movement and pioneered a sound later known as samba rock. The album's first American release came in 2007, the same year that Rolling Stone Brasil named it the 61st greatest Brazilian music record. (Full article...)
+
+          Recently featured: 1896 Cedar Keys hurricane Seattle Sounders FC John C. Calhoun
+          Archive By email More featured articles</p>
+          <div class="panel panel-info">
+          <div class="panel-heading">
+          <h1 class="panel-title">Did you know....</h1>
+        </div>
+
+            <ul>
+              <li>... that American philatelist William Thorne owned a unique block of four United States 1869 24-cent stamps with an inverted center (pictured) showing the signing of the U.S. Declaration of Independence?</li>
+              <li>.. that Ronnie O'Sullivan won the 2017 Masters snooker event, despite breaking his cue tip in his semifinal match?</li>
+              <li>... that Boro Maa created a refugee colony at Thakurnagar for the Matuas, who were displaced due to the 1947 Partition of Bengal?</li>
+              <li>... that Artur Schnabel's recordings of Beethoven's piano sonatas were the first complete recordings ever made of all of the composer's 32 piano sonatas?</li>
+              <li>... that Jon Teske posted a double-double in his first collegiate start and the first collegiate basketball game played at Little Caesars Arena?</li>
+             </ul>
+           </div>
+           </div>
+          </div>
       </div>
 
     <div class="col-md-6">
